--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,30 @@
 language: python
-python: 3.3
+python:
+    - 3.3
+    - 3.4
 env:
     matrix:
-        - TOXENV=py33
-        - TOXENV=py34
-        - TOXENV=coverage
-before_install:
-    - if test "$TOXENV" = py34; then sudo apt-get update; fi
-    - if test "$TOXENV" = py34; then sudo apt-get install python3.4 python3.4-dev; fi
+        - TOXENV="py33"
+        - TOXENV="py34"
+        - TOXENV="coverage"
+matrix:
+    exclude:
+        # exclude 3.3
+        - python: 3.3
+          env: TOXENV="py34"
+        - python: 3.3
+          env: TOXENV="coverage"
+
+        # exclude 3.4
+        - python: 3.4
+          env: TOXENV="py33"
 install:
     - pip install tox
-    - if test "$TOXENV" = coverage; then pip install coveralls; fi
+    - if test "$TOXENV" = "coverage"; then pip install coveralls; fi
 script:
     - tox
 after_success:
-    - if test "$TOXENV" = coverage; then coveralls; fi
+    - if test "$TOXENV" = "coverage"; then coveralls; fi
 notifications:
     slack:
         - gehirn:xxuGA4N6aUYhTmKJYdM15ieu
