--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,12 @@
 [tox]
-envlist = py33, py34, coverage
+envlist = py{35,36,37,38}, coverage
 
 [testenv]
 deps = nose
 commands = nosetests
 
 [testenv:coverage]
-basepython = python3.4
+basepython = python3
 deps = nose
        coverage
 commands = nosetests --with-coverage
