migrate to pytest from nose

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,5 @@
-[nosetests]
-verbosity = 2
-cover-erase = true
-cover-package = jsmapper
+[tool:pytest]
+addopts = --cov jsmapper --cov-report term
+
+[coverage:report]
+show_missing = True
