--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,9 @@
 [tox]
-envlist = py{35,36,37,38}, coverage
+envlist = py{35,36,37,38}
 
 [testenv]
-deps = nose
-commands = nosetests
-
-[testenv:coverage]
-basepython = python3
-deps = nose
-       coverage
-commands = nosetests --with-coverage
+commands = py.test -vv {posargs}
+deps =
+    pytest
+    pytest-cov
+    pytest-flake8
