tox: add flake8 env

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{35,36,37,38}
+envlist = py{35,36,37,38}, flake8
 
 [testenv]
 commands = py.test -vv {posargs}
@@ -7,3 +7,9 @@ deps =
     pytest
     pytest-cov
     pytest-flake8
+
+[testenv:flake8]
+basepython = python3
+commands = flake8 ./setup.py ./jsmapper
+deps =
+    flake8
