--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,15 @@ matrix:
     - python: "3.8"
       env:
         TOXENV: py38
+    - python: "3.8"
+      env:
+        TOXENV: flake8
 install:
   - pip install tox
   - pip install coveralls
 script:
   - tox
 after_success:
-  - coveralls
+  - |
+    [ "$TOXENV" != "flake8" ] && coveralls || true
 ...
